--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,6 +14,7 @@ p {
     overflow: hidden;
     position: fixed;
     width: 100vw;
+    z-index: 1;
 }
 
 /* Styla länkarna i navigationsfältet */
@@ -65,6 +66,28 @@ p {
     text-decoration: none;
     font-size: 1.8em;
 }
+
+/*För bilderna på bildsidan*/
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+  }
+  
+  /* Skapar fyra kolumner som bilderna sitter i */
+  .column {
+    flex: 50%;
+    max-width: 48%;
+    padding: 0 1%;
+  }
+  
+  .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+  }
 
 
 /* Inställningar för när skärmbredden är mindre än 600px */
