--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,11 +8,17 @@ p {
     font-size: 1.6em;
 }
 
+h1 {
+    font-size: 3.6em;
+}
+
 /* Bakgrund till navigatinsfältet */
 .topnav {
     background-color: #333;
     overflow: hidden;
     position: fixed;
+    top: 0;
+    left: 0;
     width: 100vw;
     z-index: 1;
 }
@@ -47,6 +53,7 @@ p {
 }
 
 .sidenav {
+    z-index: 2;
     background-color: #333;
     position: absolute;
     box-shadow: 0px 0px 5px #000000;
@@ -67,28 +74,59 @@ p {
     font-size: 1.8em;
 }
 
+.överskrift {
+    padding-top: 50px;
+    padding-bottom: 10px;
+    background-color: #333;
+    color: #f2f2f2;
+    text-align: center;
+}
+
 /*För bilderna på bildsidan*/
 .row {
     display: flex;
     flex-wrap: wrap;
     padding: 0 4px;
-    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    -webkit-filter: grayscale(100%);
+    /* Safari 6.0 - 9.0 */
     filter: grayscale(100%);
-  }
-  
-  /* Skapar fyra kolumner som bilderna sitter i */
-  .column {
+}
+
+/* Skapar fyra kolumner som bilderna sitter i */
+.column {
     flex: 50%;
     max-width: 48%;
     padding: 0 1%;
-  }
-  
-  .column img {
+}
+
+.column img {
     margin-top: 8px;
     vertical-align: middle;
     width: 100%;
-  }
+}
 
+footer {
+    background-color: #333;
+    min-height: 20vh;
+    width: 100vw;
+}
+
+footer p {
+    color: #f2f2f2;
+    padding: 30px;
+    padding-bottom: 0;
+    text-align: center;
+}
+
+footer a {
+    display: block;
+    font-size: 1.6em;
+    color: #f2f2f2;
+    padding: 10px;
+    padding-top: 0;
+    text-align: center;
+    text-decoration: none;
+}
 
 /* Inställningar för när skärmbredden är mindre än 600px */
 @media screen and (max-width: 600px) {
@@ -108,5 +146,13 @@ p {
         font-size: 2.2em;
         padding: 10px 12px;
     }
+
+    .column {
+        flex: 100%;
+        max-width: 98%;
+        padding: 0 1%;
+    }
+
+
 
 }
