Lade till förändring av muspekare på länk i footern

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -126,6 +126,7 @@ footer a {
     padding-top: 0;
     text-align: center;
     text-decoration: none;
+    cursor: pointer;
 }
 
 /* Inställningar för när skärmbredden är mindre än 600px */
