--- a/src/css/main.css
+++ b/src/css/main.css
@@ -6,6 +6,7 @@ body {
 
 p {
     font-size: 1.6em;
+    line-height: 1.6em;
 }
 
 h1 {
@@ -82,6 +83,12 @@ h1 {
     text-align: center;
 }
 
+#container1 {
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 /*För bilderna på bildsidan*/
 .row {
     display: flex;
@@ -103,6 +110,11 @@ h1 {
     margin-top: 8px;
     vertical-align: middle;
     width: 100%;
+}
+
+ul {
+    font-size: 1.6em;
+    line-height: 1.6em;
 }
 
 footer {
@@ -151,10 +163,34 @@ footer a {
 
     .column {
         flex: 100%;
+        max-width: 80%;
+        padding: 0 10%;
+    }
+
+    #container1 {
+        width: 80vw;
+        font-size: 0.8em;
+    }
+
+}
+
+@media screen and (max-width: 400px) {
+   
+    .överskrift {
+        font-size: 2.4em;
+    }
+
+    footer {
+        font-size: 0.8em;
+    }
+
+    .sidenav {
+        width: 100vw;
+    }
+
+    .column {
+        flex: 100%;
         max-width: 98%;
         padding: 0 1%;
     }
-
-
-
 }
