--- a/src/css/main.css
+++ b/src/css/main.css
@@ -89,6 +89,12 @@ h1 {
     margin-right: auto;
 }
 
+#container2 {
+    width: 80vw;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 /*För bilderna på bildsidan*/
 .row {
     display: flex;
@@ -171,6 +177,7 @@ footer a {
         width: 80vw;
         font-size: 0.8em;
     }
+    
 
 }
 
