--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -160,6 +164,29 @@ ul {
     margin: 0;
     margin-bottom: 20px;
 }
+
+#myBtn {
+    display: none; 
+    position: fixed; 
+    bottom: 20px; 
+    right: 30px; 
+    z-index: 3; 
+    border: none; 
+    outline: none; 
+    background-color: red; 
+    color: white; 
+    cursor: pointer; 
+    padding: 15px; 
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 5px; 
+    font-size: 18px; 
+    box-shadow: 0px 4px 5px #333;
+  }
+  
+  #myBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
+  }
 
 footer {
     background-color: #333;
